--- a/DuelWitch.vcxproj
+++ b/DuelWitch.vcxproj
@@ -228,6 +228,7 @@
     <ClCompile Include="Sources\Utils\JsonWrapper.cpp" />
     <ClCompile Include="Sources\Utils\LoadDataManager.cpp" />
     <ClCompile Include="Sources\Utils\MouseWrapper.cpp" />
+    <ClCompile Include="Sources\Utils\ScaleUpUI.cpp" />
     <ClCompile Include="Sources\Utils\UIObserver.cpp" />
     <ClCompile Include="Sources\Utils\RandMt.cpp" />
     <ClCompile Include="Sources\Utils\Resource.cpp" />
@@ -307,6 +308,7 @@
     <ClInclude Include="Sources\Utils\MathUtils.h" />
     <ClInclude Include="Sources\Utils\MouseWrapper.h" />
     <ClInclude Include="Sources\Utils\NonCopyable.h" />
+    <ClInclude Include="Sources\Utils\ScaleUpUI.h" />
     <ClInclude Include="Sources\Utils\UIEvent.h" />
     <ClInclude Include="Sources\Utils\UIObserver.h" />
     <ClInclude Include="Sources\Utils\picojson.h" />
