--- a/DuelWitch.vcxproj.filters
+++ b/DuelWitch.vcxproj.filters
@@ -599,6 +599,9 @@
     <ClInclude Include="Sources\Utils\BinFile.h">
       <Filter>Utils\Resource</Filter>
     </ClInclude>
+    <ClInclude Include="Sources\Utils\ConstBuffer.h">
+      <Filter>Utils\Resource</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <MeshContentTask Include="Assets\Models\Protected\bloom.FBX">
