--- a/DuelWitch.vcxproj
+++ b/DuelWitch.vcxproj
@@ -188,6 +188,7 @@
     <ClCompile Include="Sources\Game\Collision.cpp" />
     <ClCompile Include="Sources\Game\CommonServices.cpp" />
     <ClCompile Include="Sources\Game\DebugCamera.cpp" />
+    <ClCompile Include="Sources\Game\Effect.cpp" />
     <ClCompile Include="Sources\Game\EffectFactory.cpp" />
     <ClCompile Include="Sources\Game\EffectManager.cpp" />
     <ClCompile Include="Sources\Game\Element.cpp" />
@@ -214,6 +215,8 @@
     <ClCompile Include="Sources\Game\PauseScene.cpp" />
     <ClCompile Include="Sources\Game\Player.cpp" />
     <ClCompile Include="Sources\Game\MyGame.cpp" />
+    <ClCompile Include="Sources\Game\PlayerTrailEffect.cpp" />
+    <ClCompile Include="Sources\Game\PlayerTrailEffectEmitter.cpp" />
     <ClCompile Include="Sources\Game\PlayParameterLoader.cpp" />
     <ClCompile Include="Sources\Game\PlayScene.cpp" />
     <ClCompile Include="Sources\Game\UserRenderCommand.cpp" />
@@ -238,6 +241,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Sources\Utils\Color.cpp" />
     <ClCompile Include="Sources\Utils\JsonWrapper.cpp" />
     <ClCompile Include="Sources\Utils\LoadDataManager.cpp" />
     <ClCompile Include="Sources\Utils\MouseWrapper.cpp" />
@@ -294,6 +298,8 @@
     <ClInclude Include="Sources\Game\NormalMagicEffect.h" />
     <ClInclude Include="Sources\Game\NormalMagicShooter.h" />
     <ClInclude Include="Sources\Game\PauseScene.h" />
+    <ClInclude Include="Sources\Game\PlayerTrailEffect.h" />
+    <ClInclude Include="Sources\Game\PlayerTrailEffectEmitter.h" />
     <ClInclude Include="Sources\Game\PlayParameterLoader.h" />
     <ClInclude Include="Sources\Game\RenderCommand.h" />
     <ClInclude Include="Sources\Game\ResourceLoader.h" />
@@ -329,6 +335,7 @@
     <ClInclude Include="Sources\Parameters\MagicParameter.h" />
     <ClInclude Include="Sources\pch\pch.h" />
     <ClInclude Include="Sources\Utils\BinFile.h" />
+    <ClInclude Include="Sources\Utils\Color.h" />
     <ClInclude Include="Sources\Utils\ConstBuffer.h" />
     <ClInclude Include="Sources\Utils\ErrorMessage.h" />
     <ClInclude Include="Sources\Utils\ILoadData.h" />
